Minor UI fixes: - Fixed Options UI not displaying in Google Chrome - Fixed Quick Options menus overflowing on some locales - Fixed Advanced generator configuration UI clipping when window height is too small - Fixed divider in Options UI taking up all available space

--- a/entrypoints/options/main.css
+++ b/entrypoints/options/main.css
@@ -4,7 +4,7 @@ body,
 {
 	padding: 0;
 	margin: 0;
-	height: 100vh;
+	height: 450px;
 
 	overflow: auto;
 
